0.1.7
 - bugfix previous change, needed cmake options.
0.1.6
 - added cmake only build type in yujin_init_workspace.
0.1.5
 - preliminary support for finding toolchains and platforms.
0.1.4
 - added our old legacy roscreate-shortcuts script.
0.1.3
 - added a YUJIN_WORKSPACE environment variable (useful).
0.1.2
 - option for blacklisting packages, also split cmake and make build targets.
0.1.1
 - parallel native and cross build directories.
 - added a setup.bash
0.1.0
 - cfind and yujin_init_workspace added
